--- a/.github/workflows/second-workflow.yaml
+++ b/.github/workflows/second-workflow.yaml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v4
+      - name: Install pylint
+        run: pip install pylint
       - name: Do Tests
         run: pylint .
   deploy:
